--- a/AU_stylesheet.css
+++ b/AU_stylesheet.css
@@ -18,19 +18,23 @@
   width:100vw;
 }
 
+.seg {
+  padding-top: 4vw;
+}
+
 /* ボタン完全にパクリ */
 .button-74 {
   background-color: #BBBBBB;
-  border: 2px solid #444444;
-  border-radius: 30px;
-  box-shadow: #444444 4px 4px 0 0;
+  border: 0.2vw solid #444444;
+  border-radius: 1vw;
+  box-shadow: #444444 0.2vw 0.2vw 0 0;
   color: #333333;
   cursor: pointer;
   display: inline-block;
   font-weight: 600;
-  font-size: 18px;
-  padding: 0 18px;
-  line-height: 50px;
+  font-size: 2vw;
+  padding: 0 2vw;
+  line-height: 5vw;
   text-align: center;
   text-decoration: none;
   user-select: none;
@@ -41,12 +45,6 @@
   background-color: #fff;
 }
 .button-74:active {
-  box-shadow: #422800 2px 2px 0 0;
-  transform: translate(2px, 2px);
-}
-@media (min-width: 768px) {
-  .button-74 {
-    min-width: 120px;
-    padding: 0 25px;
-  }
+  box-shadow: #444444 0.5vw 0.5vw 0 0;
+  transform: translate(0.5vw, 0.5vw);
 }
